08_Networking/27-04_Test_Ingress/hello02-ing.yaml
# Exercise 19-04
#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello02-ing
spec:
  ingressClassName: nginx
  rules:
    - host: hello-world.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello01-svc 
                port:
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: hello02-svc 
                port:
                 number: 8080
